Code almost ready

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings" : {
+         "DefaultConnection" : "Data Source=LAPTOP-VPPFVDG5\\SQLEXPRESS; Database=josephWolvePack; Integrated Security=True;"
+         },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
